--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -16,10 +16,76 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h1h-kO-iAg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7gq-ri-kPM">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7ZC-YP-jPj">
+                                    <size key="itemSize" width="116" height="114"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="indexcell" id="rFU-wJ-RI7">
+                                        <rect key="frame" x="0.0" y="0.0" width="116" height="114"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="114"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="10" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hgw-uM-iQR">
+                                                    <rect key="frame" x="10" y="10" width="96" height="64"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vr4-54-2gF">
+                                                    <rect key="frame" x="5" y="79" width="106" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="hgw-uM-iQR" secondAttribute="trailing" constant="10" id="2A9-ym-R6p"/>
+                                            <constraint firstItem="hgw-uM-iQR" firstAttribute="leading" secondItem="rFU-wJ-RI7" secondAttribute="leading" constant="10" id="3vQ-lB-lbg"/>
+                                            <constraint firstItem="hgw-uM-iQR" firstAttribute="top" secondItem="rFU-wJ-RI7" secondAttribute="top" constant="10" id="PE6-fN-fQm"/>
+                                            <constraint firstAttribute="bottom" secondItem="vr4-54-2gF" secondAttribute="bottom" constant="5" id="ay3-nS-MHY"/>
+                                            <constraint firstItem="vr4-54-2gF" firstAttribute="top" secondItem="hgw-uM-iQR" secondAttribute="bottom" constant="5" id="cER-yw-8du"/>
+                                            <constraint firstAttribute="bottom" secondItem="hgw-uM-iQR" secondAttribute="bottom" constant="40" id="f68-ss-m9l"/>
+                                            <constraint firstItem="vr4-54-2gF" firstAttribute="leading" secondItem="rFU-wJ-RI7" secondAttribute="leading" constant="5" id="n4A-td-GDT"/>
+                                            <constraint firstAttribute="trailing" secondItem="vr4-54-2gF" secondAttribute="trailing" constant="5" id="teV-pr-Ub3"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Iag-VH-zFd"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="hxF-FE-AWA"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="h1h-kO-iAg" secondAttribute="bottom" id="ApH-5c-iQA"/>
+                            <constraint firstItem="h1h-kO-iAg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KMv-vs-SWg"/>
+                            <constraint firstAttribute="trailing" secondItem="h1h-kO-iAg" secondAttribute="trailing" id="MkY-zb-5Ev"/>
+                            <constraint firstItem="7gq-ri-kPM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="N13-fT-slE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7gq-ri-kPM" secondAttribute="bottom" id="Pt4-Fw-w7d"/>
+                            <constraint firstItem="h1h-kO-iAg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="flx-yR-oNn"/>
+                            <constraint firstItem="7gq-ri-kPM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="jcG-It-48o"/>
+                            <constraint firstAttribute="trailing" secondItem="7gq-ri-kPM" secondAttribute="trailing" id="lpO-r9-SKG"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="09W-V6-OVK"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="imageBackGround" destination="h1h-kO-iAg" id="kdC-G4-0W0"/>
+                        <outlet property="myCollectionView" destination="7gq-ri-kPM" id="U2i-kB-Z8n"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
