--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xcv-pW-v3q">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
@@ -81,7 +80,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="09W-V6-OVK">
-                        <barButtonItem key="leftBarButtonItem" title="city" id="hUn-Tt-JBx">
+                        <barButtonItem key="leftBarButtonItem" id="hUn-Tt-JBx">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="cityBtnClick:" destination="BYZ-38-t0r" id="NT8-Lq-bYB"/>
@@ -94,11 +93,131 @@
                         <outlet property="imageBackGround" destination="h1h-kO-iAg" id="kdC-G4-0W0"/>
                         <outlet property="myCollectionView" destination="7gq-ri-kPM" id="U2i-kB-Z8n"/>
                         <segue destination="UmU-zd-yQ8" kind="show" identifier="location" id="HMd-92-cfQ"/>
+                        <segue destination="0K8-Yr-hhD" kind="show" identifier="ssubject" id="ztb-1V-Ps7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-283.5" y="401.5"/>
+            <point key="canvasLocation" x="-734.5" y="465.5"/>
+        </scene>
+        <!--Secound Subject View Controller-->
+        <scene sceneID="dq9-6z-fmI">
+            <objects>
+                <viewController id="0K8-Yr-hhD" customClass="SecoundSubjectViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Yo5-fd-Aim"/>
+                        <viewControllerLayoutGuide type="bottom" id="SoB-2W-Jlm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ls8-Zh-Oaa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5Zi-Xs-uhw">
+                                <rect key="frame" x="130" y="64" width="245" height="603"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="60I-a7-B2L">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="sscell" id="x6g-Yg-s1C">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="0K8-Yr-hhD" id="YYK-NR-obI"/>
+                                    <outlet property="delegate" destination="0K8-Yr-hhD" id="mqe-MP-Qfx"/>
+                                </connections>
+                            </collectionView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lp8-ym-bvd">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7fM-Ox-pAX">
+                                <rect key="frame" x="0.0" y="64" width="130" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="UyZ-pZ-DOX"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="scell" rowHeight="50" id="myD-9d-ZrH">
+                                        <rect key="frame" x="0.0" y="28" width="130" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="myD-9d-ZrH" id="hmd-l4-drt">
+                                            <rect key="frame" x="0.0" y="0.0" width="130" height="49"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MiK-Hs-9fl">
+                                                    <rect key="frame" x="45" y="15" width="80" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="Svw-Ok-y1X"/>
+                                                        <constraint firstAttribute="width" constant="80" id="qDr-Qc-HS9"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="qDr-Qc-HS9"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="11" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oyn-p0-yJh">
+                                                    <rect key="frame" x="10" y="10" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="YmK-N7-W6v"/>
+                                                        <constraint firstAttribute="width" constant="30" id="ezg-uW-bil"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="MiK-Hs-9fl" secondAttribute="trailing" constant="5" id="D5l-Bw-zQW"/>
+                                                <constraint firstItem="MiK-Hs-9fl" firstAttribute="centerY" secondItem="hmd-l4-drt" secondAttribute="centerY" id="IAV-3r-wZs"/>
+                                                <constraint firstItem="oyn-p0-yJh" firstAttribute="centerY" secondItem="hmd-l4-drt" secondAttribute="centerY" id="LsA-xh-Ad4"/>
+                                                <constraint firstItem="oyn-p0-yJh" firstAttribute="leading" secondItem="hmd-l4-drt" secondAttribute="leading" constant="10" id="TEB-ux-p4r"/>
+                                                <constraint firstItem="MiK-Hs-9fl" firstAttribute="leading" secondItem="oyn-p0-yJh" secondAttribute="trailing" constant="5" id="hH6-Hh-iyY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="0K8-Yr-hhD" id="Hzg-Js-dLt"/>
+                                    <outlet property="delegate" destination="0K8-Yr-hhD" id="6zl-oD-ZCj"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Lp8-ym-bvd" secondAttribute="trailing" id="1uf-16-aaz"/>
+                            <constraint firstItem="SoB-2W-Jlm" firstAttribute="top" secondItem="5Zi-Xs-uhw" secondAttribute="bottom" id="4Fx-OB-pLf"/>
+                            <constraint firstItem="5Zi-Xs-uhw" firstAttribute="top" secondItem="Yo5-fd-Aim" secondAttribute="bottom" id="4f2-2b-3Ce"/>
+                            <constraint firstItem="SoB-2W-Jlm" firstAttribute="top" secondItem="7fM-Ox-pAX" secondAttribute="bottom" id="Gus-K6-3dv"/>
+                            <constraint firstItem="SoB-2W-Jlm" firstAttribute="top" secondItem="Lp8-ym-bvd" secondAttribute="bottom" id="SEu-FO-88d"/>
+                            <constraint firstItem="7fM-Ox-pAX" firstAttribute="leading" secondItem="Ls8-Zh-Oaa" secondAttribute="leading" id="ZhM-vy-mS4"/>
+                            <constraint firstItem="Lp8-ym-bvd" firstAttribute="leading" secondItem="Ls8-Zh-Oaa" secondAttribute="leading" id="aRl-uf-lsj"/>
+                            <constraint firstItem="5Zi-Xs-uhw" firstAttribute="leading" secondItem="7fM-Ox-pAX" secondAttribute="trailing" id="dVN-D5-uwJ"/>
+                            <constraint firstAttribute="trailing" secondItem="5Zi-Xs-uhw" secondAttribute="trailing" id="nc5-51-QKj"/>
+                            <constraint firstItem="7fM-Ox-pAX" firstAttribute="top" secondItem="Yo5-fd-Aim" secondAttribute="bottom" id="t0d-mH-tb3"/>
+                            <constraint firstItem="Lp8-ym-bvd" firstAttribute="top" secondItem="Yo5-fd-Aim" secondAttribute="bottom" id="ynh-UY-k2q"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="imageBackGrd" destination="Lp8-ym-bvd" id="i48-hd-B6m"/>
+                        <outlet property="myCollectionView" destination="5Zi-Xs-uhw" id="ZvY-qZ-84u"/>
+                        <outlet property="myTabViewSubject" destination="7fM-Ox-pAX" id="eed-Rs-LbE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JnW-yb-5wO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-268.5" y="465.5"/>
         </scene>
         <!--Location View Controller-->
         <scene sceneID="vnr-GK-7em">
@@ -217,7 +336,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JHn-iO-SpQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-283.5" y="-368.5"/>
+            <point key="canvasLocation" x="-734.5" y="-304.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VV7-mZ-yny">
@@ -235,7 +354,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="61G-RC-Bin" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-730.5" y="401.5"/>
+            <point key="canvasLocation" x="-1181.5" y="465.5"/>
         </scene>
     </scenes>
 </document>
