--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -120,7 +120,7 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="scell" rowHeight="50" id="myD-9d-ZrH">
-                                        <rect key="frame" x="0.0" y="28" width="120" height="50"/>
+                                        <rect key="frame" x="0.0" y="92" width="120" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="myD-9d-ZrH" id="hmd-l4-drt">
                                             <rect key="frame" x="0.0" y="0.0" width="120" height="49"/>
@@ -174,12 +174,12 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <imageView key="backgroundView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" id="Lp8-ym-bvd">
-                                    <rect key="frame" x="0.0" y="-64" width="255" height="603"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="255" height="603"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="sscell" id="x6g-Yg-s1C">
-                                        <rect key="frame" x="12" y="64" width="231" height="133"/>
+                                        <rect key="frame" x="12" y="0.0" width="231" height="133"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="231" height="133"/>
@@ -303,60 +303,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sII-bE-laB">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前位置:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKW-Ex-4De">
-                                        <rect key="frame" x="10" y="17" width="80" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="qhA-pH-akA"/>
-                                            <constraint firstAttribute="width" constant="80" id="tDS-Iz-PWU"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZp-wK-GW7">
-                                        <rect key="frame" x="95" y="18" width="100" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="VbV-x6-fej"/>
-                                            <constraint firstAttribute="width" constant="100" id="gRY-ou-E3N"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.087655348708190375" green="0.13495150397594638" blue="0.9475212696335078" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vSo-iF-dae">
-                                        <rect key="frame" x="280" y="15" width="80" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="1gJ-Lg-8RK"/>
-                                            <constraint firstAttribute="width" constant="80" id="8kl-d8-lCr"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" title="重新定位">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="locationBtnClick:" destination="UmU-zd-yQ8" eventType="touchUpInside" id="PwA-WC-UN2"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="0.88823898342059338" green="0.88823898342059338" blue="0.88823898342059338" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vSo-iF-dae" secondAttribute="trailing" constant="15" id="Dzm-hd-wvT"/>
-                                    <constraint firstItem="yKW-Ex-4De" firstAttribute="leading" secondItem="sII-bE-laB" secondAttribute="leading" constant="10" id="EYf-Ne-0YT"/>
-                                    <constraint firstItem="zZp-wK-GW7" firstAttribute="centerY" secondItem="sII-bE-laB" secondAttribute="centerY" id="GrP-gC-BhI"/>
-                                    <constraint firstAttribute="height" constant="60" id="Ino-nU-xyL"/>
-                                    <constraint firstItem="zZp-wK-GW7" firstAttribute="leading" secondItem="yKW-Ex-4De" secondAttribute="trailing" constant="5" id="LGP-hU-Evi"/>
-                                    <constraint firstItem="yKW-Ex-4De" firstAttribute="centerY" secondItem="sII-bE-laB" secondAttribute="centerY" id="c4S-Na-GbN"/>
-                                    <constraint firstItem="vSo-iF-dae" firstAttribute="centerY" secondItem="sII-bE-laB" secondAttribute="centerY" id="wk7-ED-3gz"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kvl-Bm-rl7">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellprovnice" rowHeight="50" id="7tp-Kc-OsG">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="92" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7tp-Kc-OsG" id="dgE-s9-TAY">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -390,19 +342,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="sII-bE-laB" secondAttribute="trailing" id="LU3-05-nTD"/>
-                            <constraint firstAttribute="trailing" secondItem="kvl-Bm-rl7" secondAttribute="trailing" id="N3C-oG-jsn"/>
-                            <constraint firstItem="sII-bE-laB" firstAttribute="leading" secondItem="x21-Tn-Pyq" secondAttribute="leading" id="Xp8-BP-IWw"/>
-                            <constraint firstItem="kvl-Bm-rl7" firstAttribute="leading" secondItem="x21-Tn-Pyq" secondAttribute="leading" id="aD0-gq-KDZ"/>
-                            <constraint firstItem="kvl-Bm-rl7" firstAttribute="top" secondItem="sII-bE-laB" secondAttribute="bottom" id="cuV-ts-I0e"/>
-                            <constraint firstItem="cnQ-k6-gnH" firstAttribute="top" secondItem="kvl-Bm-rl7" secondAttribute="bottom" id="hLp-zA-Y8o"/>
-                            <constraint firstItem="sII-bE-laB" firstAttribute="top" secondItem="27z-X6-9t5" secondAttribute="bottom" id="kzu-Ur-9GG"/>
+                            <constraint firstItem="cnQ-k6-gnH" firstAttribute="top" secondItem="kvl-Bm-rl7" secondAttribute="bottom" id="Nk9-93-b22"/>
+                            <constraint firstItem="kvl-Bm-rl7" firstAttribute="leading" secondItem="x21-Tn-Pyq" secondAttribute="leading" id="bKH-6Q-o9K"/>
+                            <constraint firstItem="kvl-Bm-rl7" firstAttribute="top" secondItem="27z-X6-9t5" secondAttribute="bottom" constant="-64" id="klG-DD-l21"/>
+                            <constraint firstAttribute="trailing" secondItem="kvl-Bm-rl7" secondAttribute="trailing" id="mg1-9o-7ZF"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="buttonLocation" destination="vSo-iF-dae" id="ZtG-WC-cyk"/>
-                        <outlet property="labLocation" destination="zZp-wK-GW7" id="r5o-Ls-PLd"/>
                         <outlet property="myTabVIewPronice" destination="kvl-Bm-rl7" id="gQ1-Dr-Bkt"/>
                     </connections>
                 </viewController>
